@@ -1,3 +1,15 @@
+2012-01-09  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* fragment.am (WARN_CXXFLAGS): Add -Wabi.
+	* Makefile.in: Regenerate.
+	* doc/Makefile.in: Same.
+	* include/Makefile.in: Same.
+	* libsupc++/Makefile.in: Same.
+	* src/Makefile.in: Same.
+	* testsuite/Makefile.in: Same.
+	* po/Makefile.in: Same.
+	* python/Makefile.in: Same.
+
 2012-01-08  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
 	* python/libstdcxx/v6/printers.py (StdForwardListPrinter): Add.
